adjusted data science tools since vs code is not found in the solution as open source tool

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "| Data Science Tools (open source, dev environment)|\n",
     "| --- |\n",
-    "| Visual Studio Code |\n",
+    "| Anaconda |\n",
     "| RStudio |\n",
     "| Spyder |\n",
     "\n"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "341d2e77",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "17249b14",
    "metadata": {},
    "outputs": [
